<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="commentText">我們很在乎您的想法，請多說一點</string>
    <string name="commentStart">星級回應</string>
    <string name="intro">羅浮宮（法語：Musée du Louvre,英語 /ˈluːv(rə)/ ），正式名稱為羅浮博物館，位於法國巴黎市中心的塞納河邊，原是建於12世紀末至13世紀初的王宮，現在是一所綜合博物館，亦是世界上最大的藝術博物館之一，以及參觀人數最多的博物館，是巴黎中心最知名的地標。

羅浮宮的建築物始建於1190年左右，並在近代曾多次進行擴建，今天所見的模樣則一個巨大的翼樓和亭閣建築群，主要組成部分的總面積則超過 60,600 平方公尺（652,000 平方英尺），館內永久收藏則包括雕塑、繪畫、美術工藝及古代東方、古代埃及和古希臘羅馬等7個分類，主要收藏1860年以前的藝術作品與考古文物，羅浮宮博物館在1793年8月10日開幕起正式對公眾開放，平均每天有 15,000 名遊客到此參觀，其中 65% 是外國遊客。[3]</string>
    <string name="location">羅浮宮博物館位於巴黎市中心的盧浮宮內，位於塞納河右岸，毗鄰杜樂麗花園。最近的兩個地鐵站是皇家宮-羅浮宮站和羅浮-里沃利站，前者有直達地下購物中心Carrousel du Louvre的地下通道。[4]

在1980 年代末和 1990 年代大改建之前，羅浮宮共有好幾個街道入口，目前大部分入口已經永久關閉。自 1993 年以來，博物館的正門位置位於拿破崙廣場金字塔底下的地下空間，遊客可以從金字塔本身、旋轉階梯處連接到博物館的通道。

博物館的參觀時間隨著時代的推移而變化。自18世紀開放以來，只有藝術家和來自外國的觀光遊客享有特權參觀，這項特權後在1850年代才消失。當博物館從1793年首次開放時，新曆法法國共和曆規定了「十天週」（法語：décades），其中前六天為藝術家和外國人訪問，後三天為將軍訪問，民眾僅能在最後一天參觀，後在在1800年代初期在恢復七天週後，民眾在每週只有 4 小時的時間能在羅浮宮參觀，週六和周日則是縮減至下午 2 點至下午 4 點期間參觀。

從1824年開始的一項新規定允許公眾在星期日和節假日時參觀，然而其他日子只對藝術家和外國遊客開放，這種情況到1855年才發生了變化，博物館更改成除了週一外全天向公眾免費開放，直到1922年才開始收費。[5]:39 [5]:42

當前自1946年開始，羅浮宮除了在週二公休和特殊假日外，通常向遊客全面開放參觀，內部允許使用照相機和錄像機，但禁止使用閃光燈。[5]:43</string>
    <string name="traffic_info">交通資訊</string>
    <string name="parking_1">*國道一號高速公路，台中交流道(178台中)下，往台中市方向順台灣大道至本館</string>
    <string name="parking_2">*國道三號高速公路，台中交流道(178台中)下，往台中市方向順台灣大道至本館</string>
    <string name="exhibition_info_1">這是展館1，他超級大，有著悠久的歷史與很多的展館紀念品很奇怪的東西，我也不清楚是什麼，這是展館1，他超級大，有著悠久的歷史與很多的展館紀念品很奇怪的東西，我也不清楚是什麼，這是展館1，他超級大，有著悠久的歷史與很多的展館紀念品很奇怪的東西，我也不清楚是什麼</string>
    <string name="exhibition_info_2">這是展館2，他超級大，有著悠久的歷史與很多的展館紀念品很奇怪的東西，我也不清楚是什麼，這是展館2，他超級大，有著悠久的歷史與很多的展館紀念品很奇怪的東西，我也不清楚是什麼，這是展館2，他超級大，有著悠久的歷史與很多的展館紀念品很奇怪的東西，我也不清楚是什麼</string>
    <string name="ticket_info_1">乘車當日訂票：乘車當日可預訂開車前30分鐘以上之車票。
非乘車當日訂票：乘車前四週（二十八天）開始預訂，即週一可預訂至四週之後的週一期間內之乘車票，但每逢週五可多預訂二天至四週後之週日乘車票（即逢週五可預訂至四週後之週五、六、日之乘車票）。如因不可抗力、國定假日或特殊情事需調整開放時間，本局將另行公告。</string>
    <string name="ticket_info_2">系統開放時間：24小時，起始時間為每日0:00。
網路訂票系統正式開放時間：每天上午0:00至下午24:00止。
語音訂票系統正式開放時間：每天上午0:00至下午24:00止。
提供訂票服務超商：統一超商、全家便利商店、萊爾富便利商店、OK超商。系統正式開放時間：每天上午0:00至下午24:00止。</string>
    <string name="ticket_info_3">預約訂票每人(身分證字號)每乘車日最多可預訂6張乘車票。
以來回票方式同時訂票，一次最多可預訂12張(去回程各6張)。以雙行程及三行程預約訂票每人(身分證字號)每乘車日相同方向最多仍限預訂6張乘車票。
本局訂票系統提供車票張數預訂並同時選擇票種，如須變更票種，於取票時告知窗口售票員或網路付款、超商取票直接重新選擇即可。
訂購自強號-普悠瑪列車「桌型座位」，乘車日前3天以上，一次限預訂4張，乘車日（含）3天以內，可預訂1至4張。</string>
    <string name="selectTicketData">請選擇資訊</string>
    <string name="ticket_count_limit" >不可大於四張</string>
</resources>