<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyTicketFragment">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/style_guide"
            android:gravity="center"
            android:text="博物館購票須知"
            android:textSize="25dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="692dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="*可購票日期"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/ticket_info_1"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="*可購票日期"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/ticket_info_2"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="*可購票日期"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/ticket_info_3"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"></TextView>
            <Button
                android:id="@+id/confrimButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="我已詳細閱讀並遵守"></Button>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>