<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrafficFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/traffic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_local_parking_24" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="自行開車" />
                <Button
                    android:id="@+id/parkinButton"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:text="及時停車資訊"
                    android:layout_gravity="center|end">

                </Button>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/parking_1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/parking_2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/style_guide"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_directions_bus_24" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="大眾交通運輸" />
                <Button
                    android:id="@+id/busButton"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:text="公車資訊"
                    android:layout_gravity="center|end">

                </Button>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/parking_1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/parking_2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"></TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/style_guide"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_train_24" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:text="大眾交通運輸" />

                <Button
                    android:id="@+id/hsrButton"
                    android:layout_width="130dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="10dp"
                    android:text="高鐵資訊">

                </Button>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/parking_1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/parking_2"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>